--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -696,9 +696,10 @@
  gem_sit_nothing_happens: "Nothing is happening"
  gem_sit_something_happens: "Something is happening"
  pink_event_chain_title: "$pink_d$'s mood"
- pink_event_chain_desc: "All Diamonds are perfect. This we know to be true. The Light of §Y[Root.GetName]§! is $pink_diamond$. Gems elate when she enters a room and her parties are unmatched. Where §W$white_d$ is able to administer vast numbers to work perfect, §!§Y$yellow_d$ leads armies like no other and §!§B$blue_d$ understands and cares for the needs of her subjects: §!§P$pink_d$ socializes.§!\nPublicly, nothing else is even thinkable.\n\nThe Court of the Diamonds however cannot entirely close its eyes to one itsy bitsy issue: §R$pink_d$'s mood§!. More accurately her complete lack of self-control and her propensity to throw excessive and violent tantrums. When §Pshe§! is bored gems around her cower in fear.\n\n§LSmall balled fists fall like hammers, smashing whatever and whoever stands too close.§!"
- f93_pink_mood_counter: "Her current Mood:"
- f93_pink_tantrum_counter: "Numer of tantrums:"
+ pink_event_chain_desc: "All Diamonds are perfect. This we know to be true. The Light of §Y[Root.GetName]§! is $pink_diamond$. Gems elate when she enters a room and her parties are unmatched. \n§W$white_d$ able to administer vast numbers to work flawless!\n§Y$yellow_d$ leading her armies to victory after victory§!\n§B$blue_d$ understands and cares for the needs of her subjects\n§!§P$pink_d$ socializes.§!\n\nPublicly, nothing else is even thinkable.\n\nThe Court of the Diamonds however cannot entirely close its eyes to one itsy bitsy issue: §R$pink_d$'s mood§!. More accurately her complete lack of self-control and her propensity to throw excessive and violent tantrums. When §Pshe§! is bored gems around her cower in fear.\n\n§LSmall balled fists fall like hammers, smashing whatever and whoever stands too close.§!"
+ f93_pinks_stable_counter: "Her stable Mood:"
+ f93_pinks_mood_counter: "Her current Mood:"
+ f93_pinks_tantrum_counter: "Numer of tantrums:"
  pink_diamond_got_poofed: "$pink_diamond$ is reforming"
  white_diamond_got_poofed: "$white_diamond$ is reforming"
  yellow_diamond_got_poofed: "$yellow_diamond$ is reforming"
