--- a/localisation/gems_l_braz_por.yml
+++ b/localisation/gems_l_braz_por.yml
@@ -105,7 +105,7 @@
  trait_geoloid2: "$trait_geoloid$"
  trait_geoloid2_desc: "$trait_geoloid_desc$"
  trait_geoloid_desc: "§LThis species is largely enigmatic and unique in its design and function, likely artificial but possessing many traits similar to lithoids despite this.§!\n"
- TRAIT_GEOLOID_EFFECT: "Requires £job_kindergartener£ Kindergartener in order to grow new £pops£ Pops\nHabitability: §G+50%§!"
+ TRAIT_GEOLOID_EFFECT: "Requires £job_kindergartner£ kindergartner in order to grow new £pops£ Pops\nHabitability: §G+50%§!"
  trait_crystal_gems: "Crystal Gem"
  trait_crystal_gems_desc: "This is a Crystal gem, an Ancient Rebel from a long gone era."
  trait_gem_unquestionable: "Servile Upbringing"
@@ -218,20 +218,20 @@
  f93_make_kindergarten_ai_building_desc: "I am an AI, I am incapable of building districts because i like losing, this helps me out, because i have no issue spamming planetary decisions"
  mod_district_kindergarten_max: "Max Kindergarten Districts"
  mod_district_kindergarten2_max: "$mod_district_kindergarten_max$"
- job_kindergartener: "Kindergartener"
- job_kindergartener_plural: "Kindergarteners"
- job_kindergartener_growth: "$job_kindergartener$"
- job_kindergartener_growth_plural: "$job_kindergartener_plural$"
- job_kindergartener_desc: "The growing of new gems is a very precise science, one that only specially-trained Kindergarteners can do with any hope of producing ideal results."
- job_kindergartener_effect_desc: "£job_kindergartener£ $job_kindergartener_plural$ increase £mod_pop_growth_speed£ §Y$MOD_POP_ASSEMBLY_SPEED$§! and produce £unity£ §E§H$unity$§!\n$gems_that_can_be_build$"
- job_kindergartener_effect_agri_desc: "To have any chance of farming on [Root.GetName] we need to scale back our $Kindergarten$ operations."
- job_kindergartener_growth_desc: "$job_kindergartener_desc$"
- mod_job_kindergartener_add: "$job_kindergartener$ Jobs"
- mod_job_kindergartener_growth_add: "$mod_job_kindergartener_add$"
+ job_kindergartner: "kindergartner"
+ job_kindergartner_plural: "kindergartners"
+ job_kindergartner_growth: "$job_kindergartner$"
+ job_kindergartner_growth_plural: "$job_kindergartner_plural$"
+ job_kindergartner_desc: "The growing of new gems is a very precise science, one that only specially-trained kindergartners can do with any hope of producing ideal results."
+ job_kindergartner_effect_desc: "£job_kindergartner£ $job_kindergartner_plural$ increase £mod_pop_growth_speed£ §Y$MOD_POP_ASSEMBLY_SPEED$§! and produce £unity£ §E§H$unity$§!\n$gems_that_can_be_build$"
+ job_kindergartner_effect_agri_desc: "To have any chance of farming on [Root.GetName] we need to scale back our $Kindergarten$ operations."
+ job_kindergartner_growth_desc: "$job_kindergartner_desc$"
+ mod_job_kindergartner_add: "$job_kindergartner$ Jobs"
+ mod_job_kindergartner_growth_add: "$mod_job_kindergartner_add$"
  mod_planet_jobs_food_upkeep_mult: "Food Upkeep"
- job_kindergartener_drone: "$job_kindergartener$"
- job_kindergartener_drone_plural: "$job_kindergartener_plural$"
- job_kindergartener_drone_desc: "$job_kindergartener_desc$"
+ job_kindergartner_drone: "$job_kindergartner$"
+ job_kindergartner_drone_plural: "$job_kindergartner_plural$"
+ job_kindergartner_drone_desc: "$job_kindergartner_desc$"
  d_kindergarten_blocker: "Kindergarten Ruins"
  d_kindergarten_blocker_desc: "This Ancient structure is a plight on this world. A scare dug into the landscape by a terrifying species. They Consume life itself and obtain magic-like abilities. Fixing this will be costly."
  mod_GEOLOID_bonus_pop_growth_mult: "Monthly Geloloid Pop Growth Multiplier"
@@ -251,14 +251,14 @@
  decision_gem_wenkwort_defiler_desc: "Remaining the $pm_wenkwort_custodian$ is not to our advantage, the directive from the $NAME_Gardeners$ are too restrictive."
  decision_pop_project_build_kg_buff1: "for ai use"
  
- decision_kindergarten_small: "A small £food£ §YAgriculture§! deposit will be removed, and be replaced with an equivalent-sized £job_kindergartener£ §YKindergarten§! site."
- decision_kindergarten_small_requirements: "Workable quantities of nutrient-rich soil are required for any small-scale £job_kindergartener£ §YKindergarten§! site to be capable of producing new gems."
- decision_kindergarten_med: "A medium £food£ §YAgriculture§! deposit will be removed, and be replaced with an equivalent-sized £job_kindergartener£ §YKindergarten§! site."
- decision_kindergarten_med_requirements: "Decent quantities of nutrient-rich soil are required for any average-scale £job_kindergartener£ §YKindergarten§! site to be capable of producing new gems."
- decision_kindergarten_large: "A large £food£ §YAgriculture§! deposit will be removed, and be replaced with an equivalent-sized £job_kindergartener£ §YKindergarten§! site."
- decision_kindergarten_large_requirements: "Abundant quantities of nutrient-rich soil are required for any large-scale £job_kindergartener£ §YKindergarten§! site to be capable of producing new gems."
- decision_gemcology_project_requirements: "All £food£ §YAgriculture§! deposits on this world must have first been converted into £job_kindergartener£ §YKindergarten§! sites."
- decision_gemcology_project_requirements_2: "Most §YDeposits§! on this world must have first been converted into £job_kindergartener£ §YGems§!."
+ decision_kindergarten_small: "A small £food£ §YAgriculture§! deposit will be removed, and be replaced with an equivalent-sized £job_kindergartner£ §YKindergarten§! site."
+ decision_kindergarten_small_requirements: "Workable quantities of nutrient-rich soil are required for any small-scale £job_kindergartner£ §YKindergarten§! site to be capable of producing new gems."
+ decision_kindergarten_med: "A medium £food£ §YAgriculture§! deposit will be removed, and be replaced with an equivalent-sized £job_kindergartner£ §YKindergarten§! site."
+ decision_kindergarten_med_requirements: "Decent quantities of nutrient-rich soil are required for any average-scale £job_kindergartner£ §YKindergarten§! site to be capable of producing new gems."
+ decision_kindergarten_large: "A large £food£ §YAgriculture§! deposit will be removed, and be replaced with an equivalent-sized £job_kindergartner£ §YKindergarten§! site."
+ decision_kindergarten_large_requirements: "Abundant quantities of nutrient-rich soil are required for any large-scale £job_kindergartner£ §YKindergarten§! site to be capable of producing new gems."
+ decision_gemcology_project_requirements: "All £food£ §YAgriculture§! deposits on this world must have first been converted into £job_kindergartner£ §YKindergarten§! sites."
+ decision_gemcology_project_requirements_2: "Most §YDeposits§! on this world must have first been converted into £job_kindergartner£ §YGems§!."
  
 #Politics
  living_standard_gem: "Purposeful Creation"
@@ -513,8 +513,8 @@
  pm_pink_celebration: "Big Party for $pink_d$"
  pm_pink_celebration_desc: "$pink_diamond$ has been so happy lately, she is playing and partying with her gems and isn't even thinking about her colony, for now."
  pm_gem_cookie_cats: "Cookie Cats"
- pm_f93_certified_kindergartener: "Certified Kindergartener"
- pm_f93_certified_kindergartener_desc: "§WOn [Root.GetName] §Y[Root.gem_pops_made]§! out of a maximum of §G[Root.f93_gems_limit]§! £pops£  Gems where created.$NEW_LINE$§!A Certified Kindergartener is operating on this planet and ensures a steady stream of Pops are created. Once no more new Gems can be created She will push for a planetary transformation into a Gem World."
+ pm_f93_certified_kindergartner: "Certified kindergartner"
+ pm_f93_certified_kindergartner_desc: "§WOn [Root.GetName] §Y[Root.gem_pops_made]§! out of a maximum of §G[Root.f93_gems_limit]§! £pops£  Gems where created.$NEW_LINE$§!A Certified kindergartner is operating on this planet and ensures a steady stream of Pops are created. Once no more new Gems can be created She will push for a planetary transformation into a Gem World."
  pm_f93_human_preserve: "Human Preserve"
  pm_f93_human_preserve_desc: "In her wisdom $Pink$ has decided to preserve a handful of humans, they now toil the fields in an quite amusing fashion, trying to make plants feed them."
  f93_gem_xeno_preserve: "Create Xeno Preserve"
