--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -126,7 +126,7 @@
  trait_ruler_diamond: "Radiance"
  trait_ruler_diamond_desc: "This Gems is simply perfect, a radiant example of gem kind, truly deserving of their leadership position."
  trait_gem_corrupt: "Corrupted Gem" 
- trait_gem_corrupt: "The Tri-Diamond attack left this gem corrupted. Forever lost to us..."
+ trait_gem_corrupt_desc: "The Tri-Diamond attack left this gem corrupted. Forever lost to us..."
 
  trait_pc_gem_preference: "Geoform Preference"
  trait_pc_gem_preference_desc: "$trait_pc_arctic_preference_desc$"
@@ -420,7 +420,7 @@
  gem_start.1005.c.desc: "There is a §Y50%§! Chance it will happen."
 
  gem_kg.2.name: "This is a §RTutorial§!"
- gem_kg.2.desc: "§WTo facilitate £pops£ pop growth you need to build an $building_buff_kindergarten1$. You can convert $district_farming$ capacity into additional §YKindergarten sites§! via planetary decision. Check the Toolstip of the $building_buff_kindergarten1$ building chain for more info\n\nOther Content:\nDecisions\nPolicies\nA Special Project\nBuildings.
+ gem_kg.2.desc: "§WTo facilitate £pops£ pop growth you need to build an $building_buff_kindergarten1$. You can convert $district_farming$ capacity into additional §YKindergarten sites§! via planetary decision. Check the tooltip of the $building_buff_kindergarten1$ building chain for more info\n\nOther Content:\nDecisions\nPolicies\nA Special Project\nBuildings."
  gem_kg.2.b: "Don't show me this again!"
  
  gem_diamond_choice.name: "Grand this world"
